drivers: qpnp-fg: Include separate debug drivers for FG drivers
Add new debug method on qpnp-fg & qpnp smbcharger to debug some point for fuel gauging charge,
to make sure some value and condition was triggering successfully,
instead of enabling a whole debug mask on qpnp-fg, that may havoc our dmesg.

This debug to check hold soc chip on battery when power supply already full, in some cases our devices seems
giving error when check "chip->hold_soc_while_full" while checking it and it won't let it go to further step of
full charge. Which mean is soc can't go to hold soc at 100% after check "chip->hold_soc_while_full" &
power supply health after it, this can make significantly idle drain to our device cause soc can't hold battery
value at 100 after full charge.

Signed-off-by: Dicky Herlambang <herlambangdicky5@gmail.com>

--- a/arch/arm64/configs/beryllium_defconfig
+++ b/arch/arm64/configs/beryllium_defconfig
@@ -396,6 +396,12 @@ CONFIG_QPNP_FG_GEN3=y
 CONFIG_SMB1355_SLAVE_CHARGER=y
 CONFIG_QPNP_SMB2=y
 CONFIG_QPNP_QNOVO=y
+CONFIG_QCOM_PRESERVE_MEM=y
+CONFIG_QPNP_FG=y
+CONFIG_QPNP_FG_DEBUG=y
+CONFIG_QPNP_SMBCHARGER=y
+CONFIG_QPNP_QG=y
+CONFIG_MSM_APM=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
