--- a/arch/arm64/configs/beryllium_defconfig
+++ b/arch/arm64/configs/beryllium_defconfig
@@ -1,6 +1,7 @@
-CONFIG_LOCALVERSION="-フォカロルス-LA.UM.10.3.c25-00400-sdm845.0"
+CONFIG_LOCALVERSION="-フォカロルス"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_PELT_UTIL_HALFLIFE_16=y
+CONFIG_PROCESS_RECLAIM=y
 CONFIG_KPROBES=y
 CONFIG_HAVE_KPROBES=y
 CONFIG_KPROBE_EVENTS=y
@@ -67,7 +68,7 @@ CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_SCHEDTUNE=y
 # CONFIG_RT_GROUP_SCHED is not set
 CONFIG_MEMCG=y
-# CONFIG_MEMCG_SWAP is not set
+CONFIG_MEMCG_SWAP=y
 CONFIG_CGROUP_BPF=y
 CONFIG_SCHED_CORE_CTL=y
 CONFIG_SCHED_CORE_ROTATE=y
@@ -88,7 +89,11 @@ CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
 CONFIG_PROFILING=y
-# CONFIG_CC_STACKPROTECTOR_STRONG is not set
+CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
+CONFIG_LTO=y
+CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
+# CONFIG_LTO_CLANG is not set
+CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
