--- a/arch/arm64/configs/beryllium_defconfig
+++ b/arch/arm64/configs/beryllium_defconfig
@@ -2,6 +2,7 @@ CONFIG_LOCALVERSION="~フォカロルス"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_KP_MODE=3
 CONFIG_AUTO_KPROFILES_FB=y
+CONFIG_ADRENO_IDLER=y
 CONFIG_KPROBES=y
 CONFIG_HAVE_KPROBES=y
 CONFIG_KPROBE_EVENTS=y
