--- a/arch/arm64/configs/beryllium_defconfig
+++ b/arch/arm64/configs/beryllium_defconfig
@@ -72,7 +72,7 @@ CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
 CONFIG_CGROUP_BPF=y
 CONFIG_SCHED_CORE_CTL=y
-CONFIG_SCHED_CORE_ROTATE=y
+# CONFIG_SCHED_CORE_ROTATE is not set
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
@@ -614,8 +614,9 @@ CONFIG_PWM_QPNP=y
 CONFIG_ARM_GIC_V3_ACL=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
-CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_ANDROID_LMK_NOTIFY_TRIGGER=y
+CONFIG_PRLMK=y
+# CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
+# CONFIG_ANDROID_LMK_NOTIFY_TRIGGER is not set
 # CONFIG_ANDROID_SIMPLE_LMK is not set
 # CONFIG_ANDROID_SIMPLE_LMK_MINFREE is not set
 # CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC is not set
